# cmake-examples

use_shard_lib/: CMakeLists.txt  main.cpp
